# AIM-PIbd-31-Gutorov-I-A

./: .gitignore  README.md  pyproject.toml
notebooks/: lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb  lab_5.ipynb
notebooks/examples/: example_1.ipynb  example_2.ipynb  example_3_1.ipynb  example_3_2.ipynb  example_4_classification.ipynb  example_4_regression.ipynb  example_5.ipynb  example_5_clusters.py  example_5_visual.py
