[project]
name = "aim-pibd-31-gutorov-i-a"
version = "0.1.0"
description = "AI Methods Labs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "featuretools>=1.31.0",
    "imbalanced-learn>=0.14.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
